New Crowdin updates (#1721)

--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Wallet wiederherstellen",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "Wenn Du eine Wiederherstellungs-Satz bestehend aus 24 Wörtern hast, wähle diese Option um Dein Wallet herzustellen.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Geben Sie einen Wiederherstellungssatz mit 24 Wörtern ein",
-  "wallet.add.optionDialog.restore.normalWallet.description": "Wähle diese Option um Deine Wallet wiederherzustellen, wenn Du einen Yoroi Wiederherstellungs-Satz bestehend aus 15 Wörtern hast, der generiert wurde als Du Deine Yoroi Wallet erstmals eingerichtet hast.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Gib einen aus 15 Wörtern bestehenden Wiederherstellungssatz ein",
+  "wallet.add.optionDialog.restore.normalWallet.description": "Wenn du einen Wiederherstellungs-Wortsatz bestehend aus {length} Wörtern hast, wähle diese Option um Deine Wallet herzustellen.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Gib einen Wiederherstellungssatz bestehend aus {length} Wörtern ein",
   "wallet.add.optionDialog.restore.paperWallet.description": "Wähle diese Option wenn Du eine Yoroi paper wallet erstellt hast (diese wird normalerweise ausgedruckt und offline aufbewahrt) um Deine Geldbeträge vom Yoroi Paper Wallet zu importieren.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Paper Wallet",
   "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets, die vor dem 29. Juli 2020 erstellt wurden, sind Wallets aus der Byron-Ära und können nicht delegiert werden.",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "Wir empfehlen, den Poolbesitzer über die Webseite des Stakepools zu kontaktieren, um ihn über sein Verhalten zu befragen. Denke daran, dass Du deine Delegation jederzeit ändern kannst, ohne dass es zu einer Unterbrechung der Erträge kommt.",
   "wallet.dashboard.poolWarnings.unknown": "Erzeugt unbekannte Probleme (lese online mehr darüber)",
   "wallet.dashboard.rewards.note": "Der erste Ertrag ist langsamer.",
+  "wallet.dashboard.rewards.unregistered": "Der Staking Schlüssel ist nicht registriert, also wird es keine Rewards geben",
   "wallet.dashboard.stakePool.age": "Alter",
   "wallet.dashboard.stakePool.circleText": "Erlöse",
   "wallet.dashboard.stakePool.cost": "Kosten",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "Es besteht die Möglichkeit mit dem Abrufen der Erträge auch den Staking Key zu de-registrieren",
   "wallet.transfer.deregister.line2": "Mit einer De-Registrierung erhält man die Registrierungsgebühr zurück und  entfernt die Delegierung von jeglichem Pool",
   "wallet.transfer.deregister.line3": "Man kann den Staking key auch behalten wenn man die Erträge abruft, und delegiert somit weiterhin zum selben Pool",
-  "wallet.transfer.deregister.line4": "Du solltest NICHT de-registrieren wenn dieser staking-Key als Pools reward account verwendet wird, weil damit alle Pool Operator Erträge direkt in die Treasury Schatztruhe gesendet werden",
+  "wallet.transfer.deregister.line4": "Du solltest den Staking key NICHT deregistrieren wenn er als reward Konto für einen Stakepool verwendet wird, weil damit alle Pool Operator Rewards zurück in die Reserven gesendet werden",
+  "wallet.transfer.deregister.line5": "Deregistrieren bedeutet, dass dieser Schlüssel keine Rewards mehr bekommen wird, bis er nicht wieder registriert wird (üblicherweise wenn wieder an einen Pool delegiert wird)",
+  "wallet.transfer.deregister.noNeedToDeregister": "Du musst NICHT deregistrieren oder an einen anderen Stakepool delegieren. Du kannst deine bevorzugte Delegierung jederzeit ändern",
   "wallet.transfer.deregister.title": "Soll der Staking Key de-registriert werden?",
   "wallet.transfer.instruction": "Alle beantragten ADA werden in die gerade ausgewählte Wallet übertragen",
   "wallet.undelegation.transaction.explanationLine1": "Du musst NICHT undelegieren bevor Du zu einem anderen Stake pool wechselst",
