--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -33,7 +33,7 @@
   "api.errors.noOutputsError": "La transaction nécessite au moins une sortie, mais aucune sortie n'a été ajoutée",
   "api.errors.pendingTransactionError": "Erreur lors de la mise à jour des transactions en cours.",
   "api.errors.poolMissingApiError": "Nous n'avons pas pu trouver ce groupe d'enjeu. Veuillez vérifier l'identifiant (ID) et assurez-vous qu'il ne s'est pas désinscrit.",
-  "api.errors.rewardAddressEmpty": "Reward address is empty.",
+  "api.errors.rewardAddressEmpty": "L' adresse de récompenses est vide.",
   "api.errors.rollbackApiError": "Un retour en arrière a été détecté.",
   "api.errors.sendTransactionApiError": "Erreur reçue du serveur lors de l'envoi de la transaction.",
   "api.errors.sendTransactionError": "Erreur reçue de l'API lors de l'envoi de la transaction.",
@@ -131,7 +131,7 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Ceux-ci vous permettent de partager facilement vos factures avec vos amis et entreprises en cliquant simplement sur une URL.",
   "global.uriSchemeTitleLabel": "URLs de Paiement Cardano",
-  "global.wrongNetwork.address": "Wrong network for address.",
+  "global.wrongNetwork.address": "Réseau incorrect pour l'adresse.",
   "incorrectTime.line1": "ATTENTION : l'heure sur votre ordinateur ne correspond pas à celle de notre serveur. Cela peut entraîner des résultats inattendus",
   "incorrectTime.line2": "Différence de temps :",
   "incorrectTime.line3": "Synchronisez l'heure sur votre appareil pour résoudre ce problème",
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurer le wallet",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "Si vous avez une phrase de récupération de 24 mots, choisissez cette option pour restaurer votre wallet.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Entrez une phrase de récupération de 24 mots",
-  "wallet.add.optionDialog.restore.normalWallet.description": "Si vous avez une phrase de récupération Yoroi composée de 15 mots et générée lorsque vous avez créé un wallet Yoroi, choisissez cette option pour restaurer votre wallet.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Entrez une phrase de récupération de 15 mots",
+  "wallet.add.optionDialog.restore.normalWallet.description": "Si vous avez une phrase de récupération de {length} mots, choisissez cette option pour restaurer votre wallet.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Entrez une phrase de récupération de {length} mots",
   "wallet.add.optionDialog.restore.paperWallet.description": "Si vous avez généré un wallet papier Yoroi (généralement imprimé et conservé hors ligne), vous pouvez choisir cette option pour importer les fonds de ce wallet papier Yoroi.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Wallet Papier",
   "wallet.add.optionDialog.walletEra.byronEra.description": "Les wallets créés avant le 29 Juillet 2020 sont de type Byron et ne peuvent pas être délégués.",
@@ -430,7 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano est le premier protocole de preuve d'enjeu dont la sécurité est prouvée",
   "wallet.currency.pick.ergo": "Ergo construit des outils cryptographiques avancés et des fonctionnalités DeFi radicalement nouvelles, sur des bases solides issues d'une décennie de recherche et de développement des blockchains",
   "wallet.currency.pick.header": "Choisissez une devise ou une plateforme",
-  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
+  "wallet.currency.pick.testnetDescription": "Les Testnets sont des chaînes alternatives à utiliser pour les tests. Cela permet aux développeurs d'applications ou aux testeurs d'expérimenter, sans devoir utiliser de vraies monnaies.",
   "wallet.dashboard.empty.text": "Allez sur la page de délégation pour choisir le groupe d'enjeu auquel vous souhaitez déléguer.",
   "wallet.dashboard.empty.title": "Vous n'avez pas encore délégué vos ADA",
   "wallet.dashboard.epochEndTitle": "Temps avant la fin de l'époque",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "Nous vous suggérons de contacter le propriétaire du pool par sa page web pour vous renseigner sur son comportement. N'oubliez pas que vous pouvez modifier votre délégation à tout moment sans interruption des récompenses.",
   "wallet.dashboard.poolWarnings.unknown": "Provoque un problème inconnu (voir en ligne pour plus d'informations)",
   "wallet.dashboard.rewards.note": "La première récompense est plus lente.",
+  "wallet.dashboard.rewards.unregistered": "La clé d'enjeu n'est pas enregistrée, donc vous ne recevrez pas de récompenses",
   "wallet.dashboard.stakePool.age": "Age",
   "wallet.dashboard.stakePool.circleText": "Revenus",
   "wallet.dashboard.stakePool.cost": "Coûts",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "Lors du retrait des récompenses, vous avez également la possibilité de révoquer la clé de mise en jeu",
   "wallet.transfer.deregister.line2": "En désinscrivant la clé de mise en jeu, vous récupérerez votre dépôt et révoquez toute délégation en cours",
   "wallet.transfer.deregister.line3": "En conservant la clé de mise en jeu, vous pourrez retirer les récompenses, mais continuer à déléguer au même pool",
-  "wallet.transfer.deregister.line4": "Vous devez PAS désinscrire cette clé d'enjeu si elle est utilisée comme compte de récompense d'un pool, car cela entraînera l'envoi direct de toutes les récompenses de l'opérateur du pool à la trésorerie",
+  "wallet.transfer.deregister.line4": "Ne PAS désinscrire cette clé d'enjeu si elle est utilisée comme compte de récompense d'un pool, car cela entraînera l'envoi automatique de toutes les récompenses de l'opérateur du pool à la trésorerie",
+  "wallet.transfer.deregister.line5": "La désinscription signifie que cette clé d'enjeu ne sera plus récompensée tant que vous ne l'aurez pas réenregistrée (généralement en déléguant à nouveau à un pool)",
+  "wallet.transfer.deregister.noNeedToDeregister": "Vous n'avez PAS besoin de vous désinscrire pour déléguer à un autre pool. Vous pouvez modifier votre préférence de délégation à tout moment",
   "wallet.transfer.deregister.title": "Désinscrire également la clé de mise en jeu ?",
   "wallet.transfer.instruction": "Tout ADA réclamé sera transféré dans votre portefeuille actuellement sélectionné",
   "wallet.undelegation.transaction.explanationLine1": "Vous n'avez PAS besoin d'arrêter une délégation avant de changer de groupe d'enjeu (pool)",
