--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Ripristina portafoglio",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
-  "wallet.add.optionDialog.restore.normalWallet.description": "Se hai una frase di recupero Yoroi composta da 15 parole generate quando hai creato un portafoglio Yoroi, scegli questa opzione per ripristinare il tuo portafoglio.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Introduci una frase di recupero composta da 15 parole",
+  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "Se hai creato un portafoglio cartaceo Yoroi (che di solito viene stampato e tenuto offline), puoi scegliere questa opzione per importare i fondi dal tuo portafoglio cartaceo Yoroi.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Portafoglio cartaceo",
   "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "Suggeriamo di contattare il proprietario della pool attraverso la pagina web della pool per chiedere informazioni sul loro comportamento. Ricordate che potete cambiare la vostra delegazione in qualsiasi momento senza interruzioni di ricompensa.",
   "wallet.dashboard.poolWarnings.unknown": "Provoca qualche problema sconosciuto (cerca online per maggiori informazioni)",
   "wallet.dashboard.rewards.note": "La prima ricompensa è più lenta.",
+  "wallet.dashboard.rewards.unregistered": "Staking key isn't registered, so you won't get rewards",
   "wallet.dashboard.stakePool.age": "Periodo",
   "wallet.dashboard.stakePool.circleText": "Rendita",
   "wallet.dashboard.stakePool.cost": "Costo",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
   "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
   "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
-  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserved",
+  "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
+  "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Qualsiasi richiesta di ADA verrà trasferito sul portafoglio selezionato",
   "wallet.undelegation.transaction.explanationLine1": "NON è necessario rimuovere la delega prima di cambiare pool",
