--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -52,7 +52,7 @@
   "daedalusTransfer.error.webSocketRestoreError": "Fout tijdens het herstellen van \"Blockchain\" adressen.",
   "daedalusTransfer.errorPage.title.label": "Het is niet mogelijk de Daedalus portemonnee te herstellen.",
   "daedalusTransfer.form.instructions.step0.text": "Geef de 12 woorden van de herstelzin van de Daedalus portemonnee in om de balans te herstellen en de inhoud van de portemonnee over te brengen naar Yoroi.",
-  "daedalusTransfer.form.instructions.step0MasterKey.text": "Geef de onversleutelde hoofdsleutel van uw Daedalus protemonnee in om de balans te herstellen en de inhoud over te brengen naar de Yoroi portemonnee.",
+  "daedalusTransfer.form.instructions.step0MasterKey.text": "Geef de onversleutelde hoofdsleutel van uw Daedalus portemonnee in om de balans te herstellen en de inhoud over te brengen naar de Yoroi portemonnee.",
   "daedalusTransfer.form.instructions.step0Paper.text": "Geef de 27 woorden van de herstel zin van de Daedalus \"papier\" portemonnee in om de balans te herstellen en de inhoud van de portemonnee over te brengen naar Yoroi.",
   "daedalusTransfer.instructions.attention.button.label": "Daedalus portemonnee",
   "daedalusTransfer.instructions.attention.masterKey.button.label": "Daedalus hoofdsleutel",
@@ -131,7 +131,7 @@
   "global.unit.ada": "ADA",
   "global.uriExplanation": "Deze stellen u in staat rekeningen met vrienden of zakelijke partners te delen door eenvoudig op een URL te klikken.",
   "global.uriSchemeTitleLabel": "Cardano betaal URL's",
-  "global.wrongNetwork.address": "Wrong network for address.",
+  "global.wrongNetwork.address": "Verkeerd netwerk voor dit adres.",
   "incorrectTime.line1": "WAARSCHUWING: De tijd op uw computer komt niet overeen met de server. Dit kan tot onverwachte resultaten leiden",
   "incorrectTime.line2": "Tijdsverschil:",
   "incorrectTime.line3": "Synchroniseer de tijd op uw apparaat om dit probleem op te lossen",
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Herstel Portemonnee",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "Als uw herstelzin uit 24 woorden bestaat dan kiest u deze optie om uw portemonnee te herstellen.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Voer de 24 woorden van de herstelzin in",
-  "wallet.add.optionDialog.restore.normalWallet.description": "Als u een Yoroi herstelzin heeft die bestaat uit 15 woorden die zijn gegenereerd toen u een Yoroi Portemonnee maakte, kiest u deze optie om uw Portemonnee te herstellen.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Geen een 15 woorden herstelzin in",
+  "wallet.add.optionDialog.restore.normalWallet.description": "Als u een herstelzin heeft die uit {length} woorden bestaat, kiest u deze optie om uw portemonnee te herstellen.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Voer een herstelzin van {length} woorden in",
   "wallet.add.optionDialog.restore.paperWallet.description": "Als u een Yoroi \"Papier\" Portemonnee gegenereerd hebt (die meestal wordt afgedrukt en offline wordt bewaard), kunt u deze optie kiezen om het geld uit je Yoroi \"Papier\" Portemonnee te importeren.",
   "wallet.add.optionDialog.restore.paperWallet.title": "\"Papieren\" Portemonnee",
   "wallet.add.optionDialog.walletEra.byronEra.description": "Portefeuilles die vóór 29 juli 2020 zijn gemaakt, zijn nog uit het Byron-tijdperk en kunnen niet worden gedelegeerd.",
@@ -430,7 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano is het eerste, aantoonbaar veilige, \"proof of stake\"-protocol",
   "wallet.currency.pick.ergo": "Ergo bouwt geavanceerde cryptografische functies en radicaal nieuwe DeFi-functionaliteit op de solide basis die is gelegd door een decennium van blockchain-theorie en -ontwikkeling",
   "wallet.currency.pick.header": "Kies een valuta of een platform",
-  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
+  "wallet.currency.pick.testnetDescription": "Testnet gebruikt een alternatieve Blockchain voor testen. Hierdoor kunnen applicatieontwikkelaars of testers experimenteren, zonder echte munten te hoeven gebruiken.",
   "wallet.dashboard.empty.text": "Ga naar de delegatiepagina om uw Stakepool voor delegatie te kiezen.",
   "wallet.dashboard.empty.title": "U heeft uw ADA nog niet gedelegeerd",
   "wallet.dashboard.epochEndTitle": "Tijd tot einde periode",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "We raden u aan contact op te nemen met de pool eigenaar via hun webpagina om te vragen naar hun gedrag. Vergeet niet dat u uw delegatie op elk moment kunt wijzigen zonder onderbreking in de beloning.",
   "wallet.dashboard.poolWarnings.unknown": "Veroorzaakt een onbekend probleem (kijk online voor meer informatie)",
   "wallet.dashboard.rewards.note": "De eerste beloning is langzamer.",
+  "wallet.dashboard.rewards.unregistered": "De stemsleutel is niet geregistreerd, dus kunt u geen beloningen ontvangen",
   "wallet.dashboard.stakePool.age": "Leeftijd",
   "wallet.dashboard.stakePool.circleText": "Opbrengst",
   "wallet.dashboard.stakePool.cost": "Kosten",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "Bij het opnemen van beloningen heeft u ook de mogelijkheid om uw \"stem\"sleutel uit te schrijven",
   "wallet.transfer.deregister.line2": "Als u Stakepool sleutel afmeldt, krijgt u uw aanbetaling terug en kunt u de sleutel van elke pool ongedaan maken",
   "wallet.transfer.deregister.line3": "Als u de Stakepool sleutel bewaart, kunt u de beloningen opnemen, maar ook doorgaan met delegeren naar dezelfde pool",
-  "wallet.transfer.deregister.line4": "U dient zich NIET uit te schrijven als deze Stakepool sleutel wordt gebruikt als de beloningsrekening van een Stakepool, omdat hierdoor alle Stakepool exploitant beloningen rechtstreeks naar de schatkist worden gestuurd",
+  "wallet.transfer.deregister.line4": "U dient zich NIET uit te schrijven als deze stemsleutel wordt gebruikt als de beloningsrekening van een Stakepool, aangezien hierdoor alle beloningen van de operator worden teruggestuurd naar de reservepot",
+  "wallet.transfer.deregister.line5": "Uitschrijven betekent dat deze sleutel geen beloningen meer ontvangt totdat u de stemsleutel opnieuw registreert (meestal door deze opnieuw te delegeren naar een pool)",
+  "wallet.transfer.deregister.noNeedToDeregister": "U hoeft zich NIET af te melden om te delegeren naar een andere Stakepool. U kunt uw delegatievoorkeur op elk moment wijzigen",
   "wallet.transfer.deregister.title": "Ook de Stakepool sleutel uitschrijven?",
   "wallet.transfer.instruction": "Elke ADA die wordt geclaimd, wordt overgebracht naar de, huidige, gekozen Portemonnee",
   "wallet.undelegation.transaction.explanationLine1": "U hoeft de delegatie NIET ongedaan te maken om van Stakepool te wisselen",
