--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -131,7 +131,7 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Eles permitem que você compartilhe faturas facilmente com amigos e empresas clicando em um URL.",
   "global.uriSchemeTitleLabel": "URLs de pagamento Cardano",
-  "global.wrongNetwork.address": "Wrong network for address.",
+  "global.wrongNetwork.address": "Endereço errado. Pertence à uma rede diferente.",
   "incorrectTime.line1": "Atenção: a hora do seu computador não está igual ao servidor. Isso pode causar resultados inesperados",
   "incorrectTime.line2": "Diferença de hora:",
   "incorrectTime.line3": "Sincronize a hora de seu dispositivo para resolver esse problema",
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurar wallet",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "Se você tiver uma frase de recuperação composta por 24 palavras, escolha esta opção para restaurar sua carteira.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Insira sua frase de recuperação constituída de 24 palavras",
-  "wallet.add.optionDialog.restore.normalWallet.description": "Se você possui uma frase de recuperação constituída de 15 palavras geradas quando você criou sua Yoroi Wallet, escolha esta opção para recuperá-la.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Insira sua frase de recuperação constituída de 15 palavras",
+  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "Se você possui uma Yoroi paper wallet, a qual é usualmente imprimida e mantida offline, você pode escolher esta opção para importar os fundos da mesma.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Paper Wallet",
   "wallet.add.optionDialog.walletEra.byronEra.description": "As carteiras criadas antes de 29 de julho de 2020 são carteiras da era Byron e não podem delegar.",
@@ -430,7 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano é o primeiro protocol de prova de stake comprovadamente seguro",
   "wallet.currency.pick.ergo": "Ergo cria recursos criptográficos avançados e funcionalidade DeFi radicalmente nova, embasada em fundações sólidas estabelecidas por uma década de teoria e desenvolvimento de blockchain",
   "wallet.currency.pick.header": "Escolha a moeda ou plataforma",
-  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
+  "wallet.currency.pick.testnetDescription": "Rede de teste é uma rede alternativa usada para testes apenas. Isso facilita o uso por desenvolvedores de aplicações e usuários testar, sem ter que usar moedas reais.",
   "wallet.dashboard.empty.text": "Vá para a página de delegação para escolher em qual stake pool você deseja delegar.",
   "wallet.dashboard.empty.title": "Você não delegou a sua ADA ainda",
   "wallet.dashboard.epochEndTitle": "Tempo até o fim da Época",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "Nós sugerimos que você entre em contato com o proprietário da pool através do website para questionar o seu comportamento. Lembre-se, você pode mudar a sua delegação a qualquer momento sem nenhuma interrupção nas suas recompensas.",
   "wallet.dashboard.poolWarnings.unknown": "Causa algum problema desconhecido (procure on-line para obter mais informações)",
   "wallet.dashboard.rewards.note": "A primeira recompensa é lenta.",
+  "wallet.dashboard.rewards.unregistered": "Chave de stake não está registrada. Você não receberá recompensas",
   "wallet.dashboard.stakePool.age": "Idade",
   "wallet.dashboard.stakePool.circleText": "Receita",
   "wallet.dashboard.stakePool.cost": "Custo",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "Ao retirar as recompensas, você também tem a opção de desregistrar a chave de staking",
   "wallet.transfer.deregister.line2": "Desregistrar a chave de staking devolverá seu depósito e cancelará a delegação para qualquer pool",
   "wallet.transfer.deregister.line3": "Manter a chave de staking permitirá que você retire as recompensas, mas continue delegando para o mesmo pool",
-  "wallet.transfer.deregister.line4": "Você NÃO deve cancelar o registro se esta chave de staking se ela estiver sendo usada como uma conta de recompensa da sua pool, isso fará com que todas as recompensas do operador da pool sejam enviadas diretamente para o tesouro",
+  "wallet.transfer.deregister.line4": "Você NÃO deve desaverbar se essa chave de stake está sendo usada como uma conta de recompensas de sua pool, pois, isso irá causar que todas as recompensas do operador da pool irá ser enviada de volta para o tesouro",
+  "wallet.transfer.deregister.line5": "Desaverbar significa que está chave não receberá recompensas até que você registre a chave de stake novamente, (normalmente isso é feito delegando para uma pool novamente)",
+  "wallet.transfer.deregister.noNeedToDeregister": "Você NÃO precisa desaverbar sua chave para delegar para uma pool diferente. Você pode mudar sua escolha a qualquer momento",
   "wallet.transfer.deregister.title": "Também desregistrar a chave de staking?",
   "wallet.transfer.instruction": "Toda ADA solicitada será transferida para sua carteira selecionada recentemente",
   "wallet.undelegation.transaction.explanationLine1": "Você NÃO precisa desfazer a delegação para mudar de stake pool",
