--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Восстановить кошелек",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
-  "wallet.add.optionDialog.restore.normalWallet.description": "Если у Вас есть фраза восстановления из 15 слов для Yoroi, сгенерированная при создании кошелька Yoroi, выберите этот вариант, чтобы восстановить свой кошелек.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Введите восстановительную фразу из 15 слов",
+  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "Если Вы создали бумажный кошелек Yoroi (который обычно печатается и хранится в офлайн), Вы можете выбрать этот вариант, чтобы импортировать средства из бумажного кошелька Yoroi.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Бумажный кошелек",
   "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "Мы рекомендуем связаться с оператором пула через сайт пула, чтобы узнать его состояние. Помните, что Вы можете сменить пул для делегирования в любое время без каких-либо перерывов в получении наград.",
   "wallet.dashboard.poolWarnings.unknown": "Возникли неизвестные проблемы (подробнее об этом можно прочитать в интернете)",
   "wallet.dashboard.rewards.note": "До получения первого вознаграждения пройдет больше времени.",
+  "wallet.dashboard.rewards.unregistered": "Staking key isn't registered, so you won't get rewards",
   "wallet.dashboard.stakePool.age": "Возраст",
   "wallet.dashboard.stakePool.circleText": "Доход",
   "wallet.dashboard.stakePool.cost": "Стоимость",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
   "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
   "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
-  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserved",
+  "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
+  "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Любая заявленная ADA будет переведена на Ваш текущий выбранный кошелек",
   "wallet.undelegation.transaction.explanationLine1": "Вам НЕ нужно отменять делегирование перед сменой пула",
