--- a/app/i18n/locales/tr-TR.json
+++ b/app/i18n/locales/tr-TR.json
@@ -131,7 +131,7 @@
   "global.unit.ada": "Ada",
   "global.uriExplanation": "Bunlar, yalnızca bir URL'yi tıklayarak faturaları arkadaşlarınızla ve işletmelerinizle kolayca paylaşmanıza olanak tanır.",
   "global.uriSchemeTitleLabel": "Cardano Ödeme Adresleri",
-  "global.wrongNetwork.address": "Wrong network for address.",
+  "global.wrongNetwork.address": "Adres için yanlış ağ.",
   "incorrectTime.line1": "WARNING: time on your computer does not match the server. This can cause unexpected results",
   "incorrectTime.line2": "Zaman farkı:",
   "incorrectTime.line3": "Synchronize time on your device to resolve this issue",
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Cüzdanı geri yükle",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "24 kelimeden oluşan bir kurtarma metniniz varsa, cüzdanınızı geri yüklemek için bu seçeneği kullanın.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "24 sözcükten oluşan kurtarma sözcüklerinizi girin",
-  "wallet.add.optionDialog.restore.normalWallet.description": "Bir Yoroi Cüzdanı oluşturduğunuzda size verilen 15 sözcükten oluşan kurtarma sözcükleriniz varsa, Cüzdanınızı geri yüklemek için bu yöntemi seçebilirsiniz.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "15 sözcükten oluşan kurtarma sözcüklerinizi girin",
+  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "Bir Yoroi Kağıt Cüzdan oluşturduysanız (genellikle yazdırılır ve çevrimdışı tutulur), Yoroi kağıt cüzdanınızdan para aktarmak için bu yöntemi seçebilirsiniz.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Kağıt Cüzdan",
   "wallet.add.optionDialog.walletEra.byronEra.description": "29 Temmuz 2020'den önce oluşturulan cüzdanlar Byron dönemi cüzdanlarıdır ve devredilemez.",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "Davranışları hakkında soru sormak için havuz sahibiyle bahis havuzunun web sayfası üzerinden iletişime geçmenizi öneririz. Unutmayın, yetkilendirmelerinizi ödüllerde herhangi bir kesinti olmadan istediğiniz zaman değiştirebilirsiniz",
   "wallet.dashboard.poolWarnings.unknown": "Bilinmeyen bazı sorunlara neden olur (daha fazla bilgi için çevrim içi belgelere bakınız)",
   "wallet.dashboard.rewards.note": "İlk ödül yavaştır.",
+  "wallet.dashboard.rewards.unregistered": "Staking key isn't registered, so you won't get rewards",
   "wallet.dashboard.stakePool.age": "Yaş",
   "wallet.dashboard.stakePool.circleText": "Gelir",
   "wallet.dashboard.stakePool.cost": "Masraf",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
   "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
   "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
-  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserved",
+  "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
+  "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Talep edilen ADA seçili olan cüzdanınıza aktarılacaktır",
   "wallet.undelegation.transaction.explanationLine1": "Bahis havuzlarını değiştirmeden önce yetkilendirmenizi kaldırmanız GEREKMEZ",
