--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "恢复钱包",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "如果你有24词恢复助记词，选择这个选项恢复钱包。",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "输入24个恢复助记词",
-  "wallet.add.optionDialog.restore.normalWallet.description": "如果您创建Yoroi钱包时恢复密钥为15个助记词，请选择此选项来恢复您的钱包。",
-  "wallet.add.optionDialog.restore.normalWallet.title": "点此输入15个恢复助记词",
+  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "如果您已生成了一个Yoroi纸钱包（通常打印后离线保存），您可以选择此选项将纸钱包中的资金导入。",
   "wallet.add.optionDialog.restore.paperWallet.title": "纸钱包",
   "wallet.add.optionDialog.walletEra.byronEra.description": "创建于2020年6月29日之前的钱包为Byron时期钱包，不能委托。",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "我们建议通过权益池的网站联系池主询问他们相关行为。请记住，您可以在任何时候更换权益池，而您的奖励不会有任何中断。",
   "wallet.dashboard.poolWarnings.unknown": "导致一些未知问题 (在线查找更多信息)",
   "wallet.dashboard.rewards.note": "首次收益较慢",
+  "wallet.dashboard.rewards.unregistered": "Staking key isn't registered, so you won't get rewards",
   "wallet.dashboard.stakePool.age": "存在时间",
   "wallet.dashboard.stakePool.circleText": "获益",
   "wallet.dashboard.stakePool.cost": "成本",
@@ -478,7 +479,7 @@
   "wallet.dashboard.summary.rewardsTitle": "收益总量",
   "wallet.dashboard.summary.title": "你的总览",
   "wallet.dashboard.upcomingRewards.at": "在...时",
-  "wallet.dashboard.upcomingRewards.endOfEpoch": "End of epoch",
+  "wallet.dashboard.upcomingRewards.endOfEpoch": "时代结束",
   "wallet.dashboard.upcomingRewards.noRewards": "当前时代将没有任何奖励",
   "wallet.dashboard.upcomingRewards.title": "即将到来的奖励",
   "wallet.dashboard.warning.pendingTx": "委托的总览信息会在暂挂交易确认后在钱包内更新",
@@ -518,9 +519,9 @@
   "wallet.nav.type.paper": "纸钱包",
   "wallet.nav.type.standard": "标准钱包",
   "wallet.nav.type.trezor": "Trezor钱包",
-  "wallet.navigation.delegationById": "Delegation by Id",
+  "wallet.navigation.delegationById": "通过权益池ID委托",
   "wallet.navigation.delegationDashboard": "总览",
-  "wallet.navigation.delegationList": "Delegation List",
+  "wallet.navigation.delegationList": "权益池列表",
   "wallet.navigation.receive": "接收",
   "wallet.navigation.send": "发送",
   "wallet.navigation.transactions": "交易",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
   "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
   "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
-  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserved",
+  "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
+  "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "所有的ADA会转移到你目前选择的钱包中",
   "wallet.undelegation.transaction.explanationLine1": "切换权益池之前，您无需先解除委托",
