--- a/app/i18n/locales/zh-Hant.json
+++ b/app/i18n/locales/zh-Hant.json
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "還原錢包",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
-  "wallet.add.optionDialog.restore.normalWallet.description": "如果您創建Yoroi錢包時恢復密鑰為15個助記詞，請選擇此選項來恢復您的錢包。",
-  "wallet.add.optionDialog.restore.normalWallet.title": "點此輸入15個恢復助記詞",
+  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "如果您已生成了一個Yoroi紙錢包(通常打印後離線保存)，您可以選擇此選項將紙錢包中的資金導入。",
   "wallet.add.optionDialog.restore.paperWallet.title": "紙錢包",
   "wallet.add.optionDialog.walletEra.byronEra.description": "Wallets created before July 29th, 2020 are Byron-era wallets and cannot delegate.",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "We suggest contacting the pool owner through the stake pool's webpage to ask about their behavior. Remember, you can change your delegation at any time without any interruptions in rewards.",
   "wallet.dashboard.poolWarnings.unknown": "Causes some unknown issue (look online for more info)",
   "wallet.dashboard.rewards.note": "The first reward is slower.",
+  "wallet.dashboard.rewards.unregistered": "Staking key isn't registered, so you won't get rewards",
   "wallet.dashboard.stakePool.age": "Age",
   "wallet.dashboard.stakePool.circleText": "Revenue",
   "wallet.dashboard.stakePool.cost": "Cost",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
   "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
   "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
-  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserved",
+  "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
+  "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
