--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -131,7 +131,7 @@
   "global.unit.ada": "ADA",
   "global.uriExplanation": "Permiten compartir fácilmente facturas con amigos y empresas, con sólo hacer clic en una URL.",
   "global.uriSchemeTitleLabel": "URLs de Pago de Cardano",
-  "global.wrongNetwork.address": "Wrong network for address.",
+  "global.wrongNetwork.address": "Red errónea para esa dirección.",
   "incorrectTime.line1": "ADVERTENCIA: La hora de tu ordenador no coincide con la del servidor. Esto puede causar resultados inesperados",
   "incorrectTime.line2": "Diferencia de tiempo:",
   "incorrectTime.line3": "Ajusta la hora en tu dispositivo para resolver este problema",
@@ -226,7 +226,7 @@
   "settings.general.languageSelect.info": "Para EMURGO, la familiaridad en Yoroi es un tema importante. Creemos que entender los conceptos de la blockchain es más fácil en tu idioma nativo. Intentamos apoyar tantos idiomas como sea posible, pero para una selección más amplia de idiomas necesitamos aceptar la ayuda de traductores de la comunidad. La traducción del idioma seleccionado es proporcionada en su totalidad por la comunidad.",
   "settings.general.languageSelect.labelInfo": "La traducción del idioma elegido es proporcionada en su totalidad por la comunidad",
   "settings.general.translation.acknowledgment": "Gracias a los siguientes miembros por su contribución: ",
-  "settings.general.translation.contributors": "Rodrigo [RODRI], Seba",
+  "settings.general.translation.contributors": "Cardano A-Z [CAZ], Seba",
   "settings.menu.blockchain.link.label": "Blockchain",
   "settings.menu.externalStorage.link.label": "Almacenamiento de memos",
   "settings.menu.general.link.label": "General",
@@ -346,8 +346,8 @@
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurar billetera",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "Si tienes una frase de recuperación de 24 palabras, elige esta opción para restaurar tu billetera.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Ingresa una frase de recuperación de 24 palabras",
-  "wallet.add.optionDialog.restore.normalWallet.description": "Si posees una frase de recuperación de Yoroi que consta de 15 palabras generadas cuando creaste una billetera de Yoroi, elige esta opción para restaurar tu billetera.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Ingresa una frase de recuperación de 15 palabras",
+  "wallet.add.optionDialog.restore.normalWallet.description": "Si posees una frase de recuperación de {length} palabras, elige esta opción para restaurar tu billetera.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Ingresa una frase de recuperación de {length} palabras",
   "wallet.add.optionDialog.restore.paperWallet.description": "Si has generado una billetera de papel de Yoroi (la cual generalmente se imprime y resguarda off-line), puedes elegir esta opción para importar tus fondos.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Billetera de Papel",
   "wallet.add.optionDialog.walletEra.byronEra.description": "Las billeteras creadas antes del 29 de julio de 2020 son billeteras de la era Byron y no pueden delegar.",
@@ -430,7 +430,7 @@
   "wallet.currency.pick.cardano": "Cardano es el primer protocolo de prueba de participación probadamente seguro",
   "wallet.currency.pick.ergo": "Ergo construye características criptográficas avanzadas y una funcionalidad DeFi radicalmente nueva sobre los sólidos cimientos de una década de teoría y desarrollo de la blockchain",
   "wallet.currency.pick.header": "Selecciona una moneda o plataforma",
-  "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
+  "wallet.currency.pick.testnetDescription": "Las testnets son cadenas alternativas que se utilizan exclusivamente para pruebas. Esto permite a los desarrolladores de aplicaciones o testers experimentar sin tener que usar monedas reales.",
   "wallet.dashboard.empty.text": "Dirígete a la sección de delegación para elegir el stake pool al que quieres delegar.",
   "wallet.dashboard.empty.title": "No has delegado tus ADA aún",
   "wallet.dashboard.epochEndTitle": "Finaliza en",
@@ -455,6 +455,7 @@
   "wallet.dashboard.poolWarnings.suggested": "Te sugerimos contactar al dueño del pool, a través de su página web, para preguntarle sobre su comportamiento. Recuerda que puedes cambiar tu delegación en cualquier momento, sin que se interrumpan las recompensas.",
   "wallet.dashboard.poolWarnings.unknown": "Causa un problema desconocido (busca en Internet para obtener más información)",
   "wallet.dashboard.rewards.note": "La primera recompensa lleva más tiempo.",
+  "wallet.dashboard.rewards.unregistered": "La clave de delegación no está registrada, por lo que no obtendrás recompensas",
   "wallet.dashboard.stakePool.age": "Edad",
   "wallet.dashboard.stakePool.circleText": "Ingresos",
   "wallet.dashboard.stakePool.cost": "Coste",
@@ -706,7 +707,9 @@
   "wallet.transfer.deregister.line1": "Al retirar las recompensas, también tienes la opción de desregistrar la clave de delegación",
   "wallet.transfer.deregister.line2": "Desregistrando la clave de delegación recuperarás tu depósito y retirarás la clave sobre cualquier pool",
   "wallet.transfer.deregister.line3": "Manteniendo la clave de delegación te permitirá retirar las recompensas, pero continuarás delegando en el mismo pool",
-  "wallet.transfer.deregister.line4": "NO debes desregistrarte si esta clave de delegación se utiliza como una cuenta de recompensa del pool, ya que esto hará que todas las recompensas del operador del pool sean enviadas directamente a la tesorería",
+  "wallet.transfer.deregister.line4": "NO debes desregistrarte si esta clave de delegación se utiliza como una cuenta de recompensa del pool, ya que esto hará que todas las recompensas del operador del pool sean enviadas directamente a la reserva",
+  "wallet.transfer.deregister.line5": "La cancelación del registro significa que esta clave ya no recibirá recompensas hasta que vuelvas a registrar la llave de delegación (normalmente delegando nuevamente en un stake pool)",
+  "wallet.transfer.deregister.noNeedToDeregister": "NO es necesario que te desregistres para delegar en otro stake pool. Puedes cambiar tu preferencia de delegación en cualquier momento",
   "wallet.transfer.deregister.title": "¿También desregistrar la clave de delegación?",
   "wallet.transfer.instruction": "Toda ADA reclamada será transferida a la billetera actualmente seleccionada",
   "wallet.undelegation.transaction.explanationLine1": "NO es necesario que canceles la delegación antes de cambiar de stake pool",
